--- a/ovsdb-rest/pom.xml
+++ b/ovsdb-rest/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.onosproject</groupId>
         <artifactId>onos-dependencies</artifactId>
-        <version>1.9.0-rc2</version>
+        <version>2.2.2</version>
         <relativePath/><!-- parent is remote -->
     </parent>
 
@@ -26,7 +26,8 @@
             org.onosproject.ovsdb-base,
             org.onosproject.drivers.ovsdb
         </onos.app.requires>
-        <onos.version>1.9.0-rc2</onos.version>
+        <web.context>/onos/ovsdb</web.context>
+        <onos.version>2.2.2</onos.version>
     </properties>
 
     <dependencies>
@@ -38,6 +39,7 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
+            <version>5.0.0</version>
         </dependency>
 
         <dependency>
@@ -94,6 +96,13 @@
             <version>${onos.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.felix/org.apache.felix.scr.annotations -->
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+            <version>1.12.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet</artifactId>
@@ -101,6 +110,7 @@
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet-core</artifactId>
+            <version>2.30</version>
         </dependency>
     </dependencies>
 
@@ -123,6 +133,7 @@
                     </instructions>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.onosproject</groupId>
                 <artifactId>onos-maven-plugin</artifactId>
