--- a/org.everis/src/main/webapp/WEB-INF/web.xml
+++ b/org.everis/src/main/webapp/WEB-INF/web.xml
@@ -47,7 +47,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
-            <param-value>org.everis.app.AppWebApplication</param-value>
+            <param-value>org.everis.app.rest.AppWebApplication</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
