--- a/ovsdb-rest/pom.xml
+++ b/ovsdb-rest/pom.xml
@@ -68,14 +68,16 @@
 
         <dependency>
             <groupId>org.onosproject</groupId>
-            <artifactId>onos-ovsdb-rfc</artifactId>
-            <version>1.6.0</version>
+            <artifactId>onos-protocols-ovsdb-rfc</artifactId>
+            <version>${onos.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.onosproject</groupId>
-            <artifactId>onos-ovsdb-api</artifactId>
-            <version>1.6.0</version>
+            <artifactId>onos-protocols-ovsdb-api</artifactId>
+            <version>${onos.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -106,11 +108,7 @@
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-servlet-core</artifactId>
-            <version>2.30</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -119,13 +117,13 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
                 <configuration>
                     <instructions>
                         <_wab>src/main/webapp/</_wab>
-                        <Bundle-SymbolicName>
-                            ${project.groupId}.${project.artifactId}
-                        </Bundle-SymbolicName>
+                        <Include-Resource>
+                            WEB-INF/classes/apidoc/swagger.json=target/swagger.json,
+                            {maven-resources}
+                        </Include-Resource>
                         <Import-Package>
                             *,org.glassfish.jersey.servlet
                         </Import-Package>
