--- a/everis/pom.xml
+++ b/everis/pom.xml
@@ -25,8 +25,8 @@
         <version>2.2.2</version>
     </parent>
 
-    <groupId>org.everis</groupId>
-    <artifactId>org.everis</artifactId>
+    <groupId>everis</groupId>
+    <artifactId>everis</artifactId>
     <version>1.0</version>
     <packaging>bundle</packaging>
 
